# raio-torto

./: CMakeLists.txt  main.cpp
engine/: LightSource.cpp  LightSource.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  World.cpp  World.h
math/: Vector.cpp  Vector.h
thing/: Sphere.cpp  Sphere.h  Thing.cpp  Thing.h
